InternexDev_Sandbox/src/objects/WF_MR__c.object
<CustomObject>
    <fields>
        <fullName>Claim_status_code__c</fullName>
        <description>Code identifying the status of the claim.
1 – Paid as primary
2 – Paid as secondary
3 – Paid as tertiary</description>
        <label>Claim status code(MR02)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Claim_submitter_s_ID__c</fullName>
        <label>Claim submitter’s ID(MR01)</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Paid_amount__c</fullName>
        <label>Paid amount(MR04)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Record_ID__c</fullName>
        <defaultValue>&quot;MR&quot;</defaultValue>
        <label>Record ID</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submitted_charges__c</fullName>
        <label>Submitted charges(MR03)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>WF_PR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>WF_PR</label>
        <referenceTo>WF_PR__c</referenceTo>
        <relationshipLabel>WF_MR</relationshipLabel>
        <relationshipName>WF_MR</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>WF_MR</label>
    <nameField>
        <displayFormat>MR-{00000}</displayFormat>
        <label>WF_MR Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>WF_MR</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>